--- a/package.json
+++ b/package.json
@@ -21,28 +21,13 @@
     "node": ">=10"
   },
   "devDependencies": {
-    "@openzeppelin/contracts": "3.1.0",
-    "@types/chai": "^4.2.6",
-    "@types/mocha": "^5.2.7",
-    "axios": "^0.20.0",
-    "chai": "^4.2.0",
     "commander": "^6.1.0",
-    "ethereum-waffle": "^3.0.0",
     "ethereumjs-util": "^7.0.4",
-    "mocha": "^6.2.2",
-    "prettier": "^2.0.5",
-    "rimraf": "^3.0.0",
-    "solc": "0.6.11",
     "ts-node": "^8.5.4",
     "typescript": "^3.7.3"
   },
   "scripts": {
-    "precompile": "rimraf ./build/",
-    "compile": "waffle",
-    "pretest": "yarn compile",
-    "test": "mocha",
     "generate-merkle-root": "ts-node scripts/generate-merkle-root.ts",
-    "generate-merkle-root:example": "ts-node scripts/generate-merkle-root.ts --input scripts/example.json",
-    "prepublishOnly": "yarn test"
+    "generate-merkle-root:example": "ts-node scripts/generate-merkle-root.ts --input scripts/example.json"
   }
 }
