--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
   "scripts": {
     "generate-merkle-root": "ts-node scripts/generate-merkle-root.ts",
     "generate-merkle-root:example": "ts-node scripts/generate-merkle-root.ts --input scripts/example.json"
+  },
+  "dependencies": {
+    "ethers": "^5.5.2"
   }
 }
