--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "commander": "^6.1.0",
+    "csv-parser": "^3.0.0",
     "ethereumjs-util": "^7.0.4",
     "ts-node": "^8.5.4",
     "typescript": "^3.7.3"
